# vc-satreduce

./: LICENSE  README.md  meson.build
include/: action.hpp  algorithms.hpp  bnb.hpp  constraint.hpp  decision.hpp  flags.hpp  graph.hpp  input-reader.hpp  sat.hpp  solution.hpp  states.hpp  stats.hpp  trailstate.hpp
src/: algorithms.cpp  bnb.cpp  graph.cpp  input-reader.cpp  main.cpp  reductions.cpp
